# text-sharpener

./: .gitignore  README.md  evaluation.ipynb  pyproject.toml
src/: evaluation.ipynb  experiment.ipynb  train_script.ipynb
src/ckpt/: basicnet_l1_1000epochs.pt  ckpt_800  load.md
src/data/: blur.py  collect.py  dataset.py  utils.py
src/data_pipeline/: blur.py  dataset.py  preprocess.py  utils.py  webscrape.py
src/model/: BetterNet.py  SharpNet.py  UNetV2.py  basic_net.py  better_net.py  cbam_unet.py  config.py  custom_loss.py  test_indices.json  train.py  u_net.py  unet.py  unet_v2.py  utils.py
src/notebooks/: evaluation.ipynb  train.ipynb  train_script.ipynb
